AC_INIT([am_randomize_file], [1.1], [ljedamus@web.de])
AM_INIT_AUTOMAKE([-Wall])
AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS
AM_PROG_AR
AC_PROG_RANLIB
AC_GNU_SOURCE
AM_GNU_GETTEXT
AM_GNU_GETTEXT_VERSION([0.19.7])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_LIBOBJ_DIR([lib])
AC_CONFIG_FILES([
  Makefile
  lib/Makefile
  src/Makefile
  po/Makefile
])
AC_OUTPUT
